--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/src/output.css" />
-    <link rel="stylesheet" href="/src/" />
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/src/output.css" />
+    <link rel="stylesheet" href="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/src/" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/node_modules/jquery/dist/jquery.min.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <!--smooth scroll-->
     <script src="https://cdn.jsdelivr.net/gh/studio-freight/lenis@latest/bundled/lenis.js"></script>
@@ -38,7 +38,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
     <!--aaaaaaaaaaaaaaaaa-->
-    <script src="/node_modules/jquery/dist/jquery.min.js"></script>
+    <script src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/node_modules/jquery/dist/jquery.min.js"></script>
   </head>
 
   <body style="background-color: #0e1015; overflow-x: hidden">
@@ -88,7 +88,7 @@
                 <a
                   href="/"
                   class="block py-2 px-3 text-black hover:text-white md:text-gray-200 md:bg-opacity-0 md:border-none md:hover:text-white hover:bg-gray-900 rounded-md"
-                  data-page="/pages/home.html"
+                  data-page="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/pages/home.html"
                   aria-current="page"
                   >Home</a
                 >
@@ -97,7 +97,7 @@
                 <a
                   href="#"
                   class="block py-2 px-3 text-black hover:text-white md:text-gray-200 md:bg-opacity-0 md:border-none md:hover:text-white hover:bg-gray-900 rounded-md"
-                  data-page="/pages/about.html"
+                  data-page="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/pages/about.html"
                   >About</a
                 >
               </li>
@@ -105,7 +105,7 @@
                 <a
                   href="#"
                   class="block py-2 px-3 text-black hover:text-white md:text-gray-200 md:bg-opacity-0 md:border-none md:hover:text-white hover:bg-gray-900 rounded-md"
-                  data-page="/pages/projects.html"
+                  data-page="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/pages/projects.html"
                   >Projects</a
                 >
               </li>
@@ -113,7 +113,7 @@
                 <a
                   href="#"
                   class="block py-2 px-3 text-black hover:text-white md:text-gray-200 md:bg-opacity-0 md:border-none md:hover:text-white hover:bg-gray-900 rounded-md"
-                  data-page="/pages/services.html"
+                  data-page="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/pages/services.html"
                   >Services</a
                 >
               </li>
@@ -121,7 +121,7 @@
                 <a
                   href="#"
                   class="block py-2 px-3 text-black hover:text-white md:text-gray-200 md:bg-opacity-0 md:border-none md:hover:text-white hover:bg-gray-900 rounded-md"
-                  data-page="/pages/pricing.html"
+                  data-page="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/pages/pricing.html"
                   >Pricing</a
                 >
               </li>
@@ -129,7 +129,7 @@
                 <a
                   href="#"
                   class="block py-2 px-3 text-black hover:text-white md:text-gray-200 md:bg-opacity-0 md:border-none md:hover:text-white hover:bg-gray-900 rounded-md"
-                  data-page="/pages/contact.html"
+                  data-page="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/pages/contact.html"
                   >Contact</a
                 >
               </li>
@@ -175,8 +175,8 @@
     <script>
       $(document).ready(function () {
         // Load the default home page content and highlight the Home link
-        $("main.body_set").load("/pages/home.html");
-        $("a[data-page='/pages/home.html']").addClass(
+        $("main.body_set").load("https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/pages/home.html");
+        $("a[data-page='https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/pages/home.html']").addClass(
           "bg-purple-600 text-white"
         );
 
@@ -190,7 +190,7 @@
           const pageUrl = $(this).data("page");
 
           // Check if the Home link is clicked
-          if (pageUrl === "/pages/home.html") {
+          if (pageUrl === "https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/pages/home.html") {
             // Reload the page
             location.reload();
             return;
