--- a/pages/about.html
+++ b/pages/about.html
@@ -55,7 +55,7 @@
       </div>
       <div class="lg:w-1/2 lg:pl-12 mt-8 lg:mt-0">
         <img
-          src="/static/image/pro3.png"
+          src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/pro3.png"
           alt="Designer Image"
           class="rounded-lg shadow-lg w-full max-w-md mx-auto animate-zoom-in"
         />
