--- a/pages/home.html
+++ b/pages/home.html
@@ -1,6 +1,6 @@
 <section
   class="first-content h-screen bg-slate-500 w-screen"
-  style="background-image: url(/static/image/dfdfdfdfdfdg.png)"
+  style="background-image: url(https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/dfdfdfdfdfdg.png)"
 >
   <div class="landing-tittle flex items-center justify-center h-screen">
     <div class="landing-container inline">
@@ -51,21 +51,21 @@
         <div>
           <img
             class="gall-img-1 h-auto max-w-full rounded-lg"
-            src="/static/image/gall-1.webp"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/gall-1.webp"
             alt=""
           />
         </div>
         <div>
           <img
             class="h-auto max-w-full rounded-lg"
-            src="/static/image/gall-6.webp"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/gall-6.webp"
             alt=""
           />
         </div>
         <div>
           <img
             class="h-auto max-w-full rounded-lg"
-            src="/static/image/gall-5.webp"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/gall-5.webp"
             alt=""
           />
         </div>
@@ -76,21 +76,21 @@
         <div>
           <img
             class="h-auto max-w-full rounded-lg"
-            src="/static/image/gall-4.webp"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/gall-4.webp"
             alt=""
           />
         </div>
         <div>
           <img
             class="h-auto max-w-full rounded-lg"
-            src="/static/image/gall-2.webp"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/gall-2.webp"
             alt=""
           />
         </div>
         <div>
           <img
             class="h-auto max-w-full rounded-lg"
-            src="/static/image/gall-3.webp"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/gall-3.webp"
             alt=""
           />
         </div>
@@ -120,7 +120,7 @@
           class="card h-auto max-w-full rounded-lg border-gray-500 border glowing-card"
         >
           <div class="card-top-icon w-100 flex justify-start p-4">
-            <img src="/static/image/card-part.svg" alt="////" />
+            <img src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/card-part.svg" alt="////" />
           </div>
           <div class="card-center-com xl:h-36 lg:h-28 md:h-32 h-28"></div>
           <div
@@ -140,7 +140,7 @@
           class="card h-auto max-w-full rounded-lg border-gray-500 border glowing-card"
         >
           <div class="card-top-icon w-100 flex justify-start p-4">
-            <img src="/static/image/card-part.svg" alt="////" />
+            <img src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/card-part.svg" alt="////" />
           </div>
           <div class="card-center-com xl:h-36 lg:h-28 md:h-32 h-28"></div>
           <div
@@ -160,7 +160,7 @@
           class="card h-auto max-w-full rounded-lg border-gray-500 border glowing-card"
         >
           <div class="card-top-icon w-100 flex justify-start p-4">
-            <img src="/static/image/card-part.svg" alt="////" />
+            <img src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/card-part.svg" alt="////" />
           </div>
           <div class="card-center-com xl:h-36 lg:h-28 md:h-32 h-28"></div>
           <div
@@ -180,7 +180,7 @@
           class="card h-auto max-w-full rounded-lg border-gray-500 border glowing-card"
         >
           <div class="card-top-icon w-100 flex justify-start p-4">
-            <img src="/static/image/card-part.svg" alt="////" />
+            <img src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/card-part.svg" alt="////" />
           </div>
           <div class="card-center-com xl:h-36 lg:h-28 md:h-32 h-28"></div>
           <div
@@ -200,7 +200,7 @@
           class="card h-auto max-w-full rounded-lg border-gray-500 border glowing-card"
         >
           <div class="card-top-icon w-100 flex justify-start p-4">
-            <img src="/static/image/card-part.svg" alt="////" />
+            <img src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/card-part.svg" alt="////" />
           </div>
           <div class="card-center-com xl:h-36 lg:h-28 md:h-32 h-28"></div>
           <div
@@ -220,7 +220,7 @@
           class="card h-auto max-w-full rounded-lg border-gray-500 border glowing-card"
         >
           <div class="card-top-icon w-100 flex justify-start p-4">
-            <img src="/static/image/card-part.svg" alt="////" />
+            <img src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/card-part.svg" alt="////" />
           </div>
           <div class="card-center-com xl:h-36 lg:h-28 md:h-32 h-28"></div>
           <div
@@ -264,14 +264,14 @@
         <div class="mb-2 xl:mb-6 md:mb-4">
           <img
             class="h-auto max-w-full rounded-lg"
-            src="/static/image/image11.webp"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/image11.webp"
             alt=""
           />
         </div>
         <div>
           <img
             class="h-auto max-w-full rounded-lg"
-            src="/static/image/image12.webp"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/image12.webp"
             alt=""
           />
         </div>
@@ -281,14 +281,14 @@
         <div class="mb-2 xl:mb-6 md:mb-4">
           <img
             class="h-auto max-w-full rounded-lg"
-            src="/static/image/image21.webp"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/image21.webp"
             alt=""
           />
         </div>
         <div>
           <img
             class="h-auto max-w-full rounded-lg"
-            src="/static/image/image22.webp"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/image22.webp"
             alt=""
           />
         </div>
@@ -298,14 +298,14 @@
         <div class="mb-2 xl:mb-6 md:mb-4">
           <img
             class="h-auto max-w-full rounded-lg"
-            src="/static/image/image31.webp"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/image31.webp"
             alt=""
           />
         </div>
         <div>
           <img
             class="h-auto max-w-full rounded-lg"
-            src="/static/image/image32.webp"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/image32.webp"
             alt=""
           />
         </div>
@@ -315,14 +315,14 @@
         <div class="mb-2 xl:mb-6 md:mb-4">
           <img
             class="h-auto max-w-full rounded-lg"
-            src="/static/image/image41.webp"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/image41.webp"
             alt=""
           />
         </div>
         <div>
           <img
             class="h-auto max-w-full rounded-lg"
-            src="/static/image/image43.webp"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/image43.webp"
             alt=""
           />
         </div>
@@ -332,14 +332,14 @@
         <div class="mb-2 xl:mb-6 md:mb-4">
           <img
             class="h-auto max-w-full rounded-lg"
-            src="/static/image/image51.webp"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/image51.webp"
             alt=""
           />
         </div>
         <div>
           <img
             class="h-auto max-w-full rounded-lg"
-            src="/static/image/image52.webp"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/image52.webp"
             alt=""
           />
         </div>
@@ -360,35 +360,35 @@
         <li class="pr-10 flex justify-center items-center">
           <img
             class="h-14 xl:h-20 lg:h-14 md:h-12 sm:h-10 h-8"
-            src="/static/image/dsddsdfdfsd.svg"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/dsddsdfdfsd.svg"
           />
         </li>
         <li class="pr-10 flex justify-center items-center">ANIMATION</li>
         <li class="pr-10 flex justify-center items-center">
           <img
             class="h-14 xl:h-20 lg:h-14 md:h-12 sm:h-10 h-8"
-            src="/static/image/dsddsdfdfsd.svg"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/dsddsdfdfsd.svg"
           />
         </li>
         <li class="pr-10 flex justify-center items-center">BRANDING</li>
         <li class="pr-10 flex justify-center items-center">
           <img
             class="h-14 xl:h-20 lg:h-14 md:h-12 sm:h-10 h-8"
-            src="/static/image/dsddsdfdfsd.svg"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/dsddsdfdfsd.svg"
           />
         </li>
         <li class="pr-10 flex justify-center items-center">DESIGN</li>
         <li class="pr-10 flex justify-center items-center">
           <img
             class="h-14 xl:h-20 lg:h-14 md:h-12 sm:h-10 h-8"
-            src="/static/image/dsddsdfdfsd.svg"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/dsddsdfdfsd.svg"
           />
         </li>
         <li class="pr-10 flex justify-center items-center">LOGO DESIGN</li>
         <li class="pr-10 flex justify-center items-center">
           <img
             class="h-14 xl:h-20 lg:h-14 md:h-12 sm:h-10 h-8"
-            src="/static/image/dsddsdfdfsd.svg"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/dsddsdfdfsd.svg"
           />
         </li>
         <li class="pr-10 flex justify-center items-center">
@@ -397,7 +397,7 @@
         <li class="pr-10 flex justify-center items-center">
           <img
             class="h-14 xl:h-20 lg:h-14 md:h-12 sm:h-10 h-8"
-            src="/static/image/dsddsdfdfsd.svg"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/dsddsdfdfsd.svg"
           />
         </li>
         <li class="pr-10 flex justify-center items-center">UI/UX</li>
@@ -405,7 +405,7 @@
     </div>
   </div>
   <!--this script for horizontal keyframe scrolling-->
-  <script src="/src/scroll_keyframe.js"></script>
+  <script src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/src/scroll_keyframe.js"></script>
 
   <div class="rolling-banners border border-r-0 border-l-0 p-1 sm:p-2">
     <div class="scroller1" data-speed="fast">
@@ -416,63 +416,63 @@
         <li class="pr-10 flex justify-center items-center">
           <img
             class="h-14 xl:h-20 lg:h-14 md:h-12 sm:h-10 h-8"
-            src="/static/image/dsddsdfdfsd.svg"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/dsddsdfdfsd.svg"
           />
         </li>
         <li class="pr-10 flex justify-center items-center">STORY TELLING</li>
         <li class="pr-10 flex justify-center items-center">
           <img
             class="h-14 xl:h-20 lg:h-14 md:h-12 sm:h-10 h-8"
-            src="/static/image/dsddsdfdfsd.svg"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/dsddsdfdfsd.svg"
           />
         </li>
         <li class="pr-10 flex justify-center items-center">USER EXPERIENCE</li>
         <li class="pr-10 flex justify-center items-center">
           <img
             class="h-14 xl:h-20 lg:h-14 md:h-12 sm:h-10 h-8"
-            src="/static/image/dsddsdfdfsd.svg"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/dsddsdfdfsd.svg"
           />
         </li>
         <li class="pr-10 flex justify-center items-center">MOTION</li>
         <li class="pr-10 flex justify-center items-center">
           <img
             class="h-14 xl:h-20 lg:h-14 md:h-12 sm:h-10 h-8"
-            src="/static/image/dsddsdfdfsd.svg"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/dsddsdfdfsd.svg"
           />
         </li>
         <li class="pr-10 flex justify-center items-center">USER EXPERIENCE</li>
         <li class="pr-10 flex justify-center items-center">
           <img
             class="h-14 xl:h-20 lg:h-14 md:h-12 sm:h-10 h-8"
-            src="/static/image/dsddsdfdfsd.svg"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/dsddsdfdfsd.svg"
           />
         </li>
         <li class="pr-10 flex justify-center items-center">BRANDING</li>
         <li class="pr-10 flex justify-center items-center">
           <img
             class="h-14 xl:h-20 lg:h-14 md:h-12 sm:h-10 h-8"
-            src="/static/image/dsddsdfdfsd.svg"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/dsddsdfdfsd.svg"
           />
         </li>
         <li class="pr-10 flex justify-center items-center">MOTION</li>
         <li class="pr-10 flex justify-center items-center">
           <img
             class="h-14 xl:h-20 lg:h-14 md:h-12 sm:h-10 h-8"
-            src="/static/image/dsddsdfdfsd.svg"
+            src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/dsddsdfdfsd.svg"
           />
         </li>
       </ul>
     </div>
     <!--this script for horizontal keyframe scrolling-->
-    <script src="/src/scrol_keyframe2.js"></script>
+    <script src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/src/scrol_keyframe2.js"></script>
   </div>
 
   <!--this script for horizontal keyframe scrolling-->
-  <script src="/src/scroll_keyframe.js"></script>
+  <script src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/src/scroll_keyframe.js"></script>
 </section>
 
 <!--this script for smooth scrolling-->
-<script src="/src/smothscroll.js">
+<script src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/src/smothscroll.js">
   //for smoth scrolling
 </script>
 
@@ -484,7 +484,7 @@
         class="bottom-card-sec p-5 bg-gray-700 bg-opacity-50 rounded-xl glowing-card"
       >
         <div class="card-start">
-          <img class="rounded-xl" src="/static/image/card1.jpeg" alt="" />
+          <img class="rounded-xl" src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/card1.jpeg" alt="" />
         </div>
         <div
           class="card-title text-white poppins-bold text-gray-500 mt-4 text-lg"
@@ -503,7 +503,7 @@
         class="bottom-card-sec p-5 bg-gray-700 bg-opacity-50 rounded-xl glowing-card"
       >
         <div class="card-start">
-          <img class="rounded-xl" src="/static/image/card2.jpeg" alt="" />
+          <img class="rounded-xl" src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/card2.jpeg" alt="" />
         </div>
         <div
           class="card-title text-white poppins-bold text-gray-500 mt-4 text-lg"
@@ -522,7 +522,7 @@
         class="bottom-card-sec p-5 bg-gray-700 bg-opacity-50 rounded-xl glowing-card"
       >
         <div class="card-start">
-          <img class="rounded-xl" src="/static/image/card3.jpeg" alt="" />
+          <img class="rounded-xl" src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/card3.jpeg" alt="" />
         </div>
         <div
           class="card-title text-white poppins-bold text-gray-500 mt-4 text-lg"
@@ -549,7 +549,7 @@
     <div class="for-absolute">
       <div class="star-icon-rotate flex justify-center" style="width: 100%">
         <img
-          src="/static/image/star-2.svg"
+          src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/static/image/star-2.svg"
           alt=""
           class="animate-spin slow-spin h-28 sm:h-36 md:h-40 lg:h-52 xl:h-60"
         />
