--- a/pages/projects.html
+++ b/pages/projects.html
@@ -34,4 +34,4 @@
     class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6"
   ></div>
 </section>
-<script src="/src/projects.js"></script>
+<script src="https://raw.githubusercontent.com/AATHILDUCKY/azeemahamed/refs/heads/main/src/projects.js"></script>
